<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="198dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:background="@color/purple_500"
        android:onClick="enable_bluetoth"
        android:text="@string/enable_bluettoh"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectimageid"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:background="@color/teal_200"
        android:onClick="select_image"
        android:text="@string/select_image"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview" />

    <ImageView
        android:id="@+id/imagepreview"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/selectimageid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selectimageid"
        app:layout_constraintTop_toTopOf="@+id/selectimageid" />


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:background="@color/purple_500"
        android:onClick="make_discovery"
        android:text="@string/make_discovery"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/listeddevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Deivce_List"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_paired_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:onClick="list_paire_devies"
        android:text="@string/list_paired_devices"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/listeddevices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.535" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="15dp"
        android:background="#B3B3B3"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.326" />


    <Button
        android:id="@+id/sendimage"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="68dp"
        android:background="@color/teal_200"
        android:onClick="snedimage"
        android:text="@string/Sendimage"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview" />
</androidx.constraintlayout.widget.ConstraintLayout>